--- a/src/TemplateCoreMaterial/Views/Home/Index.cshtml
+++ b/src/TemplateCoreMaterial/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
   <div class="mdl-cell mdl-cell--4-col mdl-cell--6-col-tablet">4 (6 tablet)</div>
   <div class="mdl-cell mdl-cell--2-col mdl-cell--4-col-phone">2 (4 phone)</div>
 </div>*@
-<div class="mdl-grid">
+@*<div class="mdl-grid">
   <div class="mdl-cell mdl-cell--4-col">
     <div class="mdl-card mdl-shadow--4dp">
       <div class="mdl-card__media">
@@ -83,4 +83,4 @@
       </div>
     </div>
   </div>
-</div>
+</div>*@
