--- a/src/TemplateCoreMaterial/Views/Shared/_Layout.cshtml
+++ b/src/TemplateCoreMaterial/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
   <title>@ViewData["Title"] - TemplateCore</title>
 
   <environment names="Development">
-    @*<link rel="stylesheet" href="~/css/site.css" />*@    
+    @*<link rel="stylesheet" href="~/css/site.css" />*@
 
     <!-- Material Design -->
     <link rel="stylesheet" href="~/css/mdl/material.css" />
@@ -27,10 +27,11 @@
     <link rel="stylesheet" href="~/css/main.css" />
   </environment>
   <environment names="Staging,Production">
-    @*<link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />*@
+    <link rel="stylesheet" href="~/css/mdl/material.css" />
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
-    <link rel="stylesheet" href="~/lib/material-design-lite/material.min.css" />
+    <link rel="stylesheet" href="~/css/main.css" />
   </environment>
 </head>
 <body>
@@ -49,10 +50,8 @@
           {
             <a asp-area="" class="mdl-navigation__link" asp-controller="User" asp-action="Index"><i class="material-icons">people</i> @Localizer["Users"]</a>
             <a asp-area="" class="mdl-navigation__link" asp-controller="Role" asp-action="Index"><i class="material-icons">group</i> @Localizer["Roles"]</a>
-          }          
+          }
 
-          @*<a asp-area="" class="mdl-navigation__link" asp-controller="Home" asp-action="About"><i class="material-icons">search</i> @Localizer["About"]</a>
-          <a asp-area="" class="mdl-navigation__link" asp-controller="Home" asp-action="Contact"><i class="material-icons">mail_outline</i> @Localizer["Contact"]</a>*@
           @await Html.PartialAsync("_LoginPartial")
 
           <i class="material-icons">settings</i>
@@ -62,14 +61,14 @@
     @*if user is logged, show other links*@
 
     @*<div class="mdl-layout__drawer">
-      <span class="mdl-layout-title">Test</span>
-      <nav class="mdl-navigation">
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-        <a class="mdl-navigation__link" href="">Link</a>
-      </nav>
-    </div>*@
+        <span class="mdl-layout-title">Test</span>
+        <nav class="mdl-navigation">
+          <a class="mdl-navigation__link" href="">Link</a>
+          <a class="mdl-navigation__link" href="">Link</a>
+          <a class="mdl-navigation__link" href="">Link</a>
+          <a class="mdl-navigation__link" href="">Link</a>
+        </nav>
+      </div>*@
     <main class="mdl-layout__content mdl-color--grey-100">
       <div class="page-content">
         <!-- Your content goes here -->
@@ -81,8 +80,8 @@
       <button class="mdl-snackbar__action" type="button"></button>
     </div>
     @*<footer class="mdl-mini-footer">
-      @await Html.PartialAsync("_Footer")
-    </footer>*@
+        @await Html.PartialAsync("_Footer")
+      </footer>*@
   </div>
 
   <environment names="Development">
@@ -91,7 +90,7 @@
     <script src="~/js/error.js" asp-append-version="true"></script>
     <script src="~/js/mdl/material.js"></script>
     <script src="~/js/mdl-custom-components/custom-components.js"></script>
-    
+
   </environment>
 
   <environment names="Staging,Production">
@@ -99,13 +98,11 @@
             asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
             asp-fallback-test="window.jQuery">
     </script>
-    <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/bootstrap.min.js"
-            asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-            asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
-    </script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
     @*<script src="~/js/site.min.js" asp-append-version="true"></script>*@
     <script src="~/js/error.js" asp-append-version="true"></script>
-    <script src="~/lib/material-design-lite/material.min.js"></script>
+    <script src="~/js/mdl/material.js"></script>
+    <script src="~/js/mdl-custom-components/custom-components.js"></script>
   </environment>
   @RenderSection("scripts", required: false)
 </body>
