--- a/src/TemplateCoreMaterial/Views/Shared/_LayoutWithoutNavigation.cshtml
+++ b/src/TemplateCoreMaterial/Views/Shared/_LayoutWithoutNavigation.cshtml
@@ -27,10 +27,10 @@
     <link rel="stylesheet" href="~/css/main.css" />
   </environment>
   <environment names="Staging,Production">
-    @*<link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />*@
+    <link rel="stylesheet" href="~/css/mdl/material.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
-    <link rel="stylesheet" href="~/lib/material-design-lite/material.min.css" />
+    <link rel="stylesheet" href="~/css/main.css" />
   </environment>
 </head>
 <body>  
@@ -54,13 +54,9 @@
             asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
             asp-fallback-test="window.jQuery">
     </script>
-    <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/bootstrap.min.js"
-            asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-            asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
-    </script>
     <script src="~/js/site.min.js" asp-append-version="true"></script>
     <script src="~/js/error.js" asp-append-version="true"></script>
-    <script src="~/lib/material-design-lite/material.min.js"></script>
+    <script src="~/js/mdl/material.js"></script>
   </environment>
   @RenderSection("scripts", required: false)
 </body>
